# rust-indexing-service

./: .env.exmpl  .gitignore  README.md
indexing-serv/: Cargo.toml  compose.yml  dockerfile  nginx.conf
indexing-serv/.sqlx/: query-a0ed047933268668c82d4aaad6945602315694f9ca734c62433e0b72c3b3b36f.json  query-ccbb19ede7e91ac8e77a1d6fcd3a7bbd4c98837267283b897fe5645dcc4351fb.json  query-da6032708ec34e60de286eb60a99299d6da830557fd4a89c91a55033b5ade0cb.json  query-e33f945bc25f7e5b96c8b36245039eb4d27f328c04b635aaa23dc66746c88825.json
indexing-serv/migrations/: 0251029_01_init.sql  20251025131230_create_transactions_table.sql  20251031205932_init.sql
indexing-serv/src/: lib.rs  main.rs
indexing-serv/src/models/: models.rs
indexing-serv/src/server/: api.rs  db.rs  indexer.rs  mod.rs
