[package]
name = "indexing-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros" ] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }

